--- a/apps/store/static/store/css/index.css
+++ b/apps/store/static/store/css/index.css
@@ -2,16 +2,31 @@ body {
 	background-color: #cbcbcb;
 	text-align: center;
 }
+h1{
+	margin:0;
+}
+.wrapper{
+	background-color: white;
+	height: 350px;
+	width: 1000px;
+}
+.right{
+	height: 200px;
+	width: 200px;
+	margin-top: 20px;
+	display: inline-block;
+	vertical-align: top;
+}
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+	table-layout: fixed;
+    width: 500px;  /* Important */
+    margin-top: 20px;
+    display: inline-block;
 }
 
 td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+    width: 155px;
+
 }
 
 tr:nth-child(even) {
